--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "jose": "^6.0.12",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
