--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "jose": "^6.0.12",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "lightningcss": "^1.30.1",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "recharts": "^3.0.2",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
