--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "clsx": "^2.1.1",
     "jose": "^6.0.12",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
@@ -18,6 +19,7 @@
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "recharts": "^3.0.2",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
