--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "postinstall": "npx lightningcss-cli --help || true",
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
@@ -12,10 +13,8 @@
     "@react-google-maps/api": "^2.19.3",
     "@types/jsonwebtoken": "^9.0.10",
     "clsx": "^2.1.1",
-    "jose": "^6.0.12",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "lightningcss": "^1.30.1",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
