--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "postinstall": "npx lightningcss-cli --help || true",
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
@@ -15,9 +14,9 @@
     "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "next": "15.4.5",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "14.0.0",
+    "react": "^18",
+    "react-dom": "^18",
     "recharts": "^3.0.2",
     "tailwind-merge": "^3.3.1"
   },
