--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "next": "14.0.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "15.4.5",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "recharts": "^3.0.2",
     "tailwind-merge": "^3.3.1"
   },
