--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "npx --yes lightningcss-cli --help || true"
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
