--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "npx --yes lightningcss-linux-x64-gnu --help || true"
+    "lint": "next lint"
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
