--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "recharts": "^3.0.2",
-    "tailwind-merge": "^3.3.1",
-    "export": "next export"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
